@@ -34,6 +34,7 @@ Cacti CHANGELOG
 -issue#5354: Realtime graphs can report undefined variable
 -issue#5355: SNMP Uptime is not always ignored for spikekills
 -issue#5356: Improve downed Device detection
+-issue#5360: Plugin missing functions warning should be debounced
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
 -feature: Upgrade ua-parser.js to version 1.0.35
